--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
-.App {
+ 
+body {
+  background-color: rgb(219, 181, 214);
+  font-family: 'Trebuchet MS', sans-serif;
+}
+h2 {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: purple;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav ul li {
+  padding: 0;
+  margin: 5;
+  list-style-type: none;
+  float: left;
 }
+nav ul li button {
+  list-style-type: none;
+  display: block;
+  color: thistle;
+  background-color: purple;
+  text-align: center;
+  padding: 14px 16px;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+  border: none;
   color: white;
+  text-decoration: none;
+  display: inline-block;
 }
 
-.App-link {
-  color: #61dafb;
+nav ul li button:hover {
+  background-color: rgb(161, 77, 150);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#container {
+  background-color: rgb(27, 27, 14);
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  position: relative;
+}
+
+
+
+table {
+  table-layout: fixed;
+  width: 100%;
+  border-collapse: collapse;
+  border: 2px solid purple;
+  
+}
+th{
+  padding: 20px;
+}
+td {
+  display: subgrid;
+  text-align: center;
+  padding: 10px;
+  color:purple;
+}
+
+#new-reserve {
+    display: none;
+}
+#cancel-reserve {
+    display: none;
+}
+
+#slotleft {
+  text-align: center;
+  padding: 10px;
+  color:purple;
+}
+#Booking-info{
+  text-align: center;
+  color:purple;
+}
+footer {
+  text-align: center;
+  padding: 3px;
+  background-color: purple;
+  color: white;
+
+  bottom:0;
+  width:100%;
+}
+#wrapper {
+    height: 50%;
 }
